apps/base/whiteboard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whiteboard
  namespace: whiteboard
spec:
  type: ClusterIP
  selector:
    app: whiteboard
  ports:
    - name: http
      port: 80
      targetPort: 5001
